--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>โรงเรียนคุณธรรม สพฐ. โรงเรียนสตรีพัทลุง</title>
+    <title>โรงเรียนคุณธรรม สพฐ. โรงเรียนสตรีพัทลุง | ข้อกำหนดและนโยบายความเป็นส่วนตัว</title>
     <link rel="icon" type="image/png" href="favicon.PNG"> 
     
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> 
